Bug 197135 - Saving graphs overwrite file without warning
Summary: Saving graphs overwrite file without warning
Status: RESOLVED FIXED
Alias: None
Product: kalgebra
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Unspecified
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-06-19 12:52 UTC by Adrien Cordonnier
Modified: 2010-12-14 05:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrien Cordonnier 2009-06-19 12:52:38 UTC
Version:           0.8 (using KDE 4.2.2)
Installed from:    Ubuntu Packages

When saving a graph as PNG image, you can chose an existing filename and Kalgebra will overwrite it without warning. It should ask before overwriting the file as other applications do.
Comment 1 Dario Andres 2009-06-24 20:43:27 UTC
Indeed, according to http://lxr.kde.org/source/KDE/kdeedu/kalgebra/src/kalgebra.cpp
the function is not checking for the file being overwritten.

To developers:
You should use a KFileDIalog object and call setConfirmOverwrite(true), or use the new proposed API at http://reviewboard.kde.org/r/822/

Thanks
Comment 2 Aleix Pol 2010-12-14 05:21:16 UTC
SVN commit 1206276 by apol:

Ask KFileDialog to ask the user if he _really_ wants to overwrite a file to be saved.

BUG: 197135


 M  +4 -4      kalgebra.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1206276