Ask KFileDialog to ask the user if he _really_ wants to overwrite a file to be saved.

BUG: 197135

svn path=/trunk/KDE/kdeedu/kalgebra/; revision=1206276